Soft Body ignores Goal on Lattice #26876

Closed
opened 2011-04-11 19:00:38 +02:00 by Vox Lapin · 15 comments

%%%The attached Blend file has two cubes and two cube-like lattices. In all cases their four negative-X-facing verts/controlpoints are assigned to a vertex group. There is also a floor-like collider object.
The two objects labeled "Default Softbody Behavior" show the behavior after simply enabling Softbody.
The two objects labeled "goal vgroup Softbody Behavior" show the behavior after also setting the vgroup as the Soft Body Goal.
Animating with alt-A shows that softbody is not consistently applied to meshes and lattices, even with default settings, and that further, using a vgroup to control the soft body goal has no effect.
Unchecking "Soft Body Goal" on the two lattices shows no effect.
The behavior shows a loss of functionality from 2.49b - even opening this 2.5 file in 2.49b shows the older build is able to properly consider the goal.

Vista 64, found on 36033 64, confirmed on trunk/36102%%%

%%%The attached Blend file has two cubes and two cube-like lattices. In all cases their four negative-X-facing verts/controlpoints are assigned to a vertex group. There is also a floor-like collider object. The two objects labeled "Default Softbody Behavior" show the behavior after simply enabling Softbody. The two objects labeled "goal vgroup Softbody Behavior" show the behavior after also setting the vgroup as the Soft Body Goal. Animating with alt-A shows that softbody is not consistently applied to meshes and lattices, even with default settings, and that further, using a vgroup to control the soft body goal has no effect. Unchecking "Soft Body Goal" on the two lattices shows no effect. The behavior shows a loss of functionality from 2.49b - even opening this 2.5 file in 2.49b shows the older build is able to properly consider the goal. Vista 64, found on 36033 64, confirmed on trunk/36102%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Also, found while investigating workarounds: The Mesh Deform modifier is available for Lattices, but the Bind button (required for functionality) is grayed out. If Mesh Deform cannot operate on Lattices, it should be removed from the Add Modifier menu?%%%

%%%Also, found while investigating workarounds: The Mesh Deform modifier is available for Lattices, but the Bind button (required for functionality) is grayed out. If Mesh Deform cannot operate on Lattices, it should be removed from the Add Modifier menu?%%%
Member

%%%We'll check this, but it would be appreciated if you confirm you tested the binaries from blender.org.
%%%

%%%We'll check this, but it would be appreciated if you confirm you tested the binaries from blender.org. %%%
Author

%%%Sure Ton! I recreated the test scene from scratch with 2.56a win64 from the site. Same behavior. Attaching blend labeled 256a.%%%

%%%Sure Ton! I recreated the test scene from scratch with 2.56a win64 from the site. Same behavior. Attaching blend labeled 256a.%%%
Author

%%%(or rather, trying and failing)%%%

%%%(or rather, trying and failing)%%%
Member

%%%There's a release candidate for 2.57 on frontpage blender.org too.

Attach works if you first write text, then attach and save changes :)%%%

%%%There's a release candidate for 2.57 on frontpage blender.org too. Attach works if you first write text, then attach and save changes :)%%%
Author

%%%The issue appears in 36033 64 from graphicall, 36102 32 hand-rolled, and BF 2.56a, but you need to see it in RC2-36007 specifically? You trollin'? >:)
Re-created from scratch with RC2-36007, same behavior, file uploaded. This time I used "load factory setttings" to preclude interference from my default BLEND.
E pur si muove!%%%

%%%The issue appears in 36033 64 from graphicall, 36102 32 hand-rolled, and BF 2.56a, but you need to see it in RC2-36007 *specifically*? You trollin'? >:) Re-created from scratch with RC2-36007, same behavior, file uploaded. This time I used "load factory setttings" to preclude interference from my default BLEND. E pur si muove!%%%
Member

%%%Its not about recreating it in the RC2, it's about verifying the problem in that version. Only to ensure it is still a bug.
Using builds from graphical or own builds also can give false positives.%%%

%%%Its not about recreating it in the RC2, it's about verifying the problem in that version. Only to ensure it is still a bug. Using builds from graphical or own builds also can give false positives.%%%

%%%Can i ask for status of this report? Is it still an issue? And maybe Janne can give some feedback here?%%%

%%%Can i ask for status of this report? Is it still an issue? And maybe Janne can give some feedback here?%%%

%%%I just checked it with rev 47053 and the problem still exists. I will have a look and see if I can fix it.%%%

%%%I just checked it with rev 47053 and the problem still exists. I will have a look and see if I can fix it.%%%

%%%Can somebody comment whether it actually makes sense to look into this issue or will this module be redundant anyways after the bullet engine is introduced (GSOC12)?%%%

%%%Can somebody comment whether it actually makes sense to look into this issue or will this module be redundant anyways after the bullet engine is introduced (GSOC12)?%%%

%%%Okay that was easy to fix. Check attached patch and report back please.%%%

%%%Okay that was easy to fix. Check attached patch and report back please.%%%

%%%Patch looked fine, commited at revision 47075.
Thanks for both report and patch! Closing report now :)%%%

%%%Patch looked fine, commited at revision 47075. Thanks for both report and patch! Closing report now :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thanks for the fix! :)
That was some of "my bugs"... I mean a report of mine (the same issue). So if it wasn't closed.... it can be removed now (and clean the list a bit).%%%

%%%Thanks for the fix! :) That was some of "my bugs"... I mean a report of mine (the same issue). So if it wasn't closed.... it can be removed now (and clean the list a bit).%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26876
No description provided.