Fix #26876: Soft Body ignores Goal on Lattice

Patch by Arno Mayrhofer (aka azrael3000) with only slight code style modifications, thanks!